# HangoutAgent

./: .gitignore  DEMO_BUILD_GUIDE.md  DEVELOPMENT.md  README.md  langgraph.json  pyproject.toml  travel-multi-agent-mcp-plan-latest.md  travel-multi-agent-mcp-plan.md  travel-multi-agent-mcp-plan2.md
app/: main.py
app/agents/: email_agent.py
app/agents/email/: email_agent.py
app/agents/hangout/: agents.py  mcp_client.py  orchestrator.py  prompts.py  supervisor.py  tools.py
app/agents/travel/: agents.py  mcp_client.py  pipeline.py  prompts.py  state.py  supervisor.py  tools.py
app/agents/travel/subagents/: __init__.py  planner_agent.py  poi_agent.py  route_agent.py  weather_agent.py
app/api/v1/: chat.py  hangout.py  travel.py
app/common/: sse.py
app/integrations/: gmail_auth.py  gmail_tools.py
app/models/: hangout.py  schemas.py  session.py
app/static/: index.html
app/static/404/: index.html
docs/: build-travel-agent-from-zero.md  demo-to-project.md  step-by-step-minimal-demo-fixed.md  step-by-step-minimal-demo.md  tutorial-travel-multi-agent.md
scripts/: test_gaode_ip_location.py  test_ticket_mcp_tools.py  test_travel_e2e_dialog.py
src/travel_agent/: __init__.py
test/: test_conversation.py  test_demo.py  test_graph_direct.py  test_state_tools.py
