[project]
name = "travel-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "riddler", email = "510251627@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "dashscope>=1.25.18",
    "fastapi>=0.136.1",
    "fastmcp>=3.3.1",
    "langchain>=1.3.1",
    "langchain-deepseek>=1.0.1",
    "langchain-google-community[gmail]>=4.0.0",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli>=0.4.26",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.4",
    "uvicorn>=0.47.0",
]

[project.scripts]
travel-agent = "travel_agent:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
